# python-git-labeler

./: .pylintrc  README.md  _config.yml  pyproject.toml
.github/workflows/: codeql-analysis.yml  pypi-publish.yml
git_labeler/: script.py
