[tool.poetry]
name = "git-labeler"
version = "0.1.1"
description = "Apply, change, remove labels on multiple or single repos in one go"
authors = ["John Stilia <stilia.johny@gmail.com>"]
license = "GPL-3"
keywords = ["git", "multi-push"]
readme = "README.md"
include = [
    "LICENSE.md",
    "README.md",
]
homepage = "https://stiliajohny.github.io/python-git-labeler "
repository = "https://github.com/stiliajohny/python-git-labeler.git "

[tool.poetry.dependencies]
python = "^3.10"
GitPython = "^3.1.27"
pyfiglet = "^0.8.post1"
pyaml = "^21.10.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git-labeler= "git_labeler.script:main"